Archive2/9c/32125c1178843c/output
main.cpp: In function 'int main()':
main.cpp:30:5: error: static assertion failed: This should compile
     static_assert(std::is_same<decltype(test_substring<3, 4>(Field<10>("abcde"), 0)), std::true_type>::value, "This should compile");
     ^
